feat: manage ModemManager isolation from web (#38)
